@@ -8,6 +8,6 @@ Examples
     inequality_constraints.ipynb
     model_selection.ipynb
     lipid.ipynb
-    batch fitting <https://nbviewer.jupyter.org/github/refnx/refnx-models/blob/master/batch/batch_fitting.ipynb>
-    analytical SLD profiles <https://nbviewer.jupyter.org/github/refnx/refnx-models/blob/master/functional/functional.ipynb>
+    batch fitting <https://nbviewer.jupyter.org/github/refnx/refnx-models/blob/main/batch/batch_fitting.ipynb>
+    analytical SLD profiles <https://nbviewer.jupyter.org/github/refnx/refnx-models/blob/main/functional/functional.ipynb>
     nsf.ipynb
